// Copyright 2021 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package cv.internal.changelist;

option go_package = "go.chromium.org/luci/cv/internal/changelist;changelist";

import "google/protobuf/timestamp.proto";

import "go.chromium.org/luci/cv/internal/changelist/storage.proto";

// UpdateCLTask is for updating a single CL.
//
// Queue: "update-cl".
message UpdateCLTask {
  string luci_project = 1;

  // At least one of internal or external ID must be given.
  int64 id = 2; // internal CLID
  string external_id = 3;

  google.protobuf.Timestamp updated_hint = 4;
}

// BatchUpdateCLTask is for updating many CLs.
//
// When executed, it just enqueues its tasks as individual UpdateCLTask TQ
// for independent execution.
//
// Queue: "update-cl".
message BatchUpdateCLTask {
  repeated UpdateCLTask tasks = 1;
}

// BatchOnCLUpdatedTask notifies many Projects and Runs about updated CLs.
//
// Queue: "notify-on-cl-updated".
message BatchOnCLUpdatedTask {
  map<string, CLUpdatedEvents> projects = 1;
  map<string, CLUpdatedEvents> runs = 2;
}
